force-app/main/default/objects/Market_Impact__c/Market_Impact__c.object-meta.xml
<CustomObject>
    <label>Market Impact</label>
    <pluralLabel>Market Impacts</pluralLabel>
    <nameField>
        <displayFormat>MIMP-{0000}</displayFormat>
        <label>Market Impact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>