force-app/main/default/objects/Market_Impact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>MarketImpactsOnAccount</relationshipName>
    <relationshipLabel>Market Impacts</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>