force-app/main/default/objects/Market_Impact__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>Market_Event__c</referenceTo>
    <relationshipName>MarketImpactsForEvent</relationshipName>
    <relationshipLabel>Market Impacts</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>