force-app/main/default/objects/Market_Impact__c/fields/Exposure_Amount__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Amount__c</fullName>
    <label>Exposure Amount</label>
    <required>true</required>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>