force-app/main/default/objects/Market_Impact__c/fields/Exposure_Pct_of_AUM__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Pct_of_AUM__c</fullName>
    <label>Exposure Pct of AUM</label>
    <required>true</required>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>