force-app/main/default/objects/Market_Impact__c/fields/RM__c.field-meta.xml
<CustomField>
    <fullName>RM__c</fullName>
    <label>RM</label>
    <type>Text</type>
    <formula>Account__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>