force-app/main/default/objects/Market_Impact__c/fields/RM_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>RM_Action_Required__c</fullName>
    <label>RM Action Required</label>
    <type>Checkbox</type>
    <formula>Exposure_Pct_of_AUM__c >= 20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>