force-app/main/default/objects/Market_Impact__c/fields/Severity_Score__c.field-meta.xml
<CustomField>
    <fullName>Severity_Score__c</fullName>
    <label>Severity Score</label>
    <type>Number</type>
    <precision>7</precision>
    <scale>2</scale>
    <formula>Exposure_Pct_of_AUM__c * ABS(Event__r.Pct_Change__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>